# presenton

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  NOTICE  README.md  build.js  docker-compose.yml  docker-dev-start.sh  docker-start.sh  forge.config.js  nginx.conf  package-lock.json  package.json  start.js  tsconfig.json
servers/fastapi/: Dockerfile  fastapi.spec  fastapi_app.spec  get_test_schema.py  main.py  mcp_server.py  openai_spec.json  pyproject.toml  requirements.txt  server.py  server.spec  server_autoreload.py  server_test.py  test.py
servers/fastapi/api/: lifespan.py  main.py  middlewares.py  models.py  request_utils.py  sql_models.py  utils.py
servers/fastapi/app_mcp/: __init__.py  server.py
servers/fastapi/constants/: documents.py  llm.py  supported_ollama_models.py
servers/fastapi/document_processor/: loader.py
servers/fastapi/enums/: image_provider.py  llm_provider.py
servers/fastapi/graph_processor/: models.py  utils.py
servers/fastapi/image_processor/: icons_finder.py  icons_vectorstore_utils.py  image_from_pptx.py  images_finder.py  utils.py
servers/fastapi/models/: document_chunk.py  generate_presentation_api.py  generate_presentation_request.py  llm_message.py  llm_tool_call.py  llm_tools.py  ollama_model_metadata.py  ollama_model_status_response.py  pptx_models.py  presentation_and_path.py  presentation_from_template.py  presentation_layout.py  presentation_outline_model.py  presentation_with_slides.py  sse_response.py  user_config.py
servers/fastapi/ppt_config_generator/: document_summary_generator.py  models.py  (+4 more)
(+807 files in other folders)
