[tool.poetry]
name = "presenton-fastapi-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["standard"], version = "^0.115.12" }
langchain = "^0.3.25"
sqlmodel = "^0.0.24"
python-pptx = "^1.0.2"
python-docx = "^1.1.2"
langchain-openai = "^0.3.16"
langchain-google-genai = "^2.1.4"
langchain-community = "^0.3.23"
torch = { version = "^2.7.0+cpu", source = "pytorch-cpu" }
langchain-huggingface = "^0.2.0"
pdfplumber = "^0.11.6"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
